--- a/css/style.css
+++ b/css/style.css
@@ -376,18 +376,18 @@ a:after {
     letter-spacing: 8px;
     font-size: 100px;
     font-weight: bold;
-    text-shadow: 2px 2px 2px #000;
+    text-shadow: 8px 8px 8px #000;
 }
 
 #headerwrap p {
     color: #ffffff;
     font-size: 40px;
-    font-weight: 400;
+    font-weight: bold;
     text-align: center;
     line-height: 40px;
     letter-spacing: 3px;
     margin-left: 15px;
-    text-shadow: 1px 1px 1px #000;
+    text-shadow: 4px 4px 4px #000;
 }
 
 .greywrap {
@@ -444,13 +444,13 @@ a:after {
 }
 
 .homebtn {
-    border: 3px solid #fff;
+    border: 4px solid #fff;
     color: #fff;
     border-radius: 0;
     padding: 15px 20px;
-    font-size: 22px;
+    font-size: 25px;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 900;
 }
 
 .homebtn:hover {
