--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ body {
 }
 
 .navbar-default {
-    border-color: transparent;
+    border-color: white;
     background-color: rgba(255, 255, 255, 0.0);
     -webkit-transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
