Added a Page Not Created Page

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,12 @@
     background: #ffffff;
 }
 
+.sorry{
+    color: #ffffff;
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
 
 
 
