--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ a:focus {
     color: #ffffff;
     background: #EF233C;
     border: 2px solid transparent;
-    border-radius: 0;
+    border-radius: 100px;
     box-shadow: inset 0 0 0 50px #EF233C;
     transition: ease-out 0.3s;
     -webkit-transition: ease-out 0.3s;
